--- a/style.css
+++ b/style.css
@@ -1,1 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Poppins', sans-serif;
+}
+
+body {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-height: 100vh;
+   background-color: #43A047;
+}
+
+.container {
+   width: 450px;
+   background-color: #fff;
+   border-radius: 8px;
+   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.container h2 {
+   font-weight: 600;
+   font-size: 1.31rem;
+   padding: 1rem 1.75rem;
+   border-bottom: 1px solid #d4dbe5;
+}
+
+.wrapper {
+   margin: 1.25rem 1.75rem;
+}
+
+.wrapper .input-box {
+   position: relative;
+}
+
+.input-box input {
+   width: 100%;
+   height: 53px;
+   color: #000;
+   background: none;
+   font-size: 1.06rem;
+   font-weight: 500;
+   border-radius: 4px;
+   letter-spacing: 1.4px;
+   border: 1px solid #aaa;
+   padding: 0 2.85rem 0 1rem;
+}
+
+.input-box span {
+   position: absolute;
+   right: 13px;
+   cursor: pointer;
+   line-height: 53px;
+   color: #707070;
+}
+
+.input-box span:hover {
+   color: #43A047;
+}
+
+.wrapper .pass-indicator {
+   width: 100%;
+   height: 4px;
+   position: relative;
+   margin-top: 0.75rem;
+   border-radius: 25px;
+}
+
+.pass-indicator::before {
+   position: absolute;
+   content: "";
+   height: 100%;
+   width: 50%;
+   border-radius: inherit;
+   transition: width 0.3s ease;
+}
+
+.pass-indicator#weak::before {
+   width: 20%;
+   background-color: #E64A4A;
+}
+
+.pass-indicator#medium::before {
+   width: 50%;
+   background-color: #F1C80B;
+}
+
+.pass-indicator#strong:before {
+   width: 100%;
+   background-color: #43A047;
+}
