--- a/style.css
+++ b/style.css
@@ -93,3 +93,65 @@ body {
    width: 100%;
    background-color: #43A047;
 }
+
+.wrapper .pass-length {
+   margin: 1.56rem 0 1.25rem;
+}
+
+.pass-length .details {
+   display: flex;
+   justify-content: space-between;
+}
+
+.pass-length input {
+   width: 100%;
+   height: 5px;
+}
+
+.pass-settings .options {
+   display: flex;
+   list-style: none;
+   flex-wrap: wrap;
+   margin-top: 1rem;
+}
+
+.pass-settings .options .option {
+   display: flex;
+   align-items: center;
+   margin-bottom: 1rem;
+   width: calc(100% / 2);
+}
+
+.options .option:first-child {
+   pointer-events: none;
+}
+
+.options .option:first-child input {
+   opacity: 0.7;
+}
+
+.options .option input {
+   height: 16px;
+   width: 16px;
+   cursor: pointer;
+}
+
+.options .option label {
+   cursor: pointer;
+   color: #4f4f4f;
+   padding-left: 0.63rem;
+}
+
+.wrapper .generate-btn {
+   width: 100%;
+   color: #fff;
+   border: none;
+   outline: none;
+   cursor: pointer;
+   background-color: #43A047;
+   font-size: 1.06rem;
+   padding: 0.94rem 0;
+   border-radius: 5px;
+   text-transform: uppercase;
+   margin: 0.94rem 0 1.3rem;
+}
